force-app/main/default/objects/InterestTable__mdt/InterestTable__mdt.object-meta.xml
<CustomObject>
    <label>Tabela de Juros</label>
    <pluralLabel>Tabelas de juros</pluralLabel>
</CustomObject>