force-app/main/default/objects/InterestTable__mdt/fields/Level2Rate__c.field-meta.xml
<CustomField>
    <fullName>Level2Rate__c</fullName>
    <label>Juros Nivel 2</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>